spacing fix

--- a/src/Components/pages/CarbonCyclePage/CarbonCyclePage.scss
+++ b/src/Components/pages/CarbonCyclePage/CarbonCyclePage.scss
@@ -8,7 +8,7 @@
     justify-content: center;
 
     width: 100%;
-    height: 125vh;
+    height: 150vh;
     
     text-align: center;
 
