--- a/src/Components/pages/WhatSolutionPage/WhatSolutionPage.scss
+++ b/src/Components/pages/WhatSolutionPage/WhatSolutionPage.scss
@@ -8,7 +8,7 @@
     justify-content: center;
 
     width: 100%;
-    height: 50vh;
+    height: 70vh;
     
     text-align: center;
 
